# DataStructuresEx01

./: Algorithm.h  AppUI.cpp  AppUI.h  CMakeLists.txt  ItemType.cpp  ItemType.h  LoopAlgorithm.cpp  LoopAlgorithm.h  Node.cpp  Node.h  RecAlgorithm.cpp  RecAlgorithm.h  RecViaStackAlgorithm.cpp  RecViaStackAlgorithm.h  Stack.cpp  Stack.h  StackExceptions.cpp  StackExceptions.h  SumAlgorithms.cpp  SumAlgorithms.h  WrongInputException.h  main.cpp
